<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="280dp"
    android:orientation="vertical"
    android:padding="@dimen/_8dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@drawable/burgers" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/_4dp"
        android:paddingTop="@dimen/_4dp">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="18dp"
            android:layout_weight="1"
            android:src="@drawable/reddot" />

        <TextView
            android:id="@+id/itemname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/item_Name"
            android:textAppearance="?android:textAppearanceLarge" />

        <ImageView
            android:id="@+id/foodRecipe"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/menu_dots" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_4dp"
        android:paddingTop="@dimen/_4dp"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="@dimen/_4dp"
                android:text="@string/RsSymbol"
                android:textAppearance="?android:textAppearanceLarge" />

            <TextView
                android:id="@+id/itemprice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/price"
                android:textAppearance="?android:textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:weightSum="7">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/minus" />

            <TextView

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:gravity="center_horizontal"
                android:text="@string/quantity"
                android:textAppearance="?android:textAppearanceLarge" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/add" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>